# gemini-research-tools-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/adk/: __init__.py  tools.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  client.py  models.py
src/dify/: .env.example  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt  test_api_response.py  test_tools.py
src/dify/provider/: __init__.py  gemini_research.py  gemini_research.yaml
src/dify/tools/: __init__.py  analyze_urls.py  analyze_urls.yaml  deep_research.py  deep_research.yaml  get_research_result.py  get_research_result.yaml  get_research_status.py  get_research_status.yaml  quick_search.py  quick_search.yaml  search_and_analyze.py  search_and_analyze.yaml
src/mcp/: __init__.py  server.py
src/ui/: __init__.py  app.py
tests/: __init__.py  test_client.py  test_models.py
