[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-research-tools-mcp"
version = "0.1.0"
description = "Gemini Research Tools (Deep Research, Quick Search, URL Analysis) as MCP Server, CLI, Web UI, and ADK Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "atakamizawa"}
]
keywords = ["gemini", "research", "deep-research", "quick-search", "url-context", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-genai>=1.57.0",
    "pydantic>=2.12.5",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
adk = [
    "google-adk>=1.22.0",
]
cli = [
    "typer>=0.21.1",
    "rich>=14.2.0",
]
ui = [
    "streamlit>=1.52.2",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
all = [
    "gemini-research-tools-mcp[adk,cli,ui,dev]",
]

[project.scripts]
grt = "src.cli.main:app"
grt-mcp = "src.mcp.server:main"

[project.urls]
Homepage = "https://github.com/atakamizawa/gemini-research-tools-mcp"
Repository = "https://github.com/atakamizawa/gemini-research-tools-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
